welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:1: error: Missing closing brace `}' assumed here
def indexOfMaxValue(nums:Array[Int]):Int = {
^indexOfMaxValue:3: error: Missing closing brace `}' assumed here
var i = 0
^indexOfMaxValue:4: error: expected class or object definition
var M = 0
^indexOfMaxValue:6: error: expected class or object definition
	while (i < nums.length) {
        ^