welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {

var i = 0
var M = 0

	while (i < nums.length) {
			
